# SafeCrossAI

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  README_GR.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tests.yml
configs/: baseline_cv.yaml  demo.yaml
docs/: API_REFERENCE.md  BENCHMARKS.md  CLI.md  DATASETS.md  EVALUATION_PROTOCOL.md  IMPLEMENTATION_POLICY.md  IND_DATASET.md  LSTM_BASELINE.md  LSTM_EVALUATION.md  PIPELINE.md  PROJECT_PROPOSAL.md  REPOSITORY_AUDIT.md  RESEARCH_OVERVIEW.md  ROADMAP.md  SOCIAL_INTERACTIONS.md  STAGE_1_BASELINE.md  SYSTEM_ARCHITECTURE.md  TRAINING.md  TRAIN_TEST_BENCHMARKS.md  VISUALIZATION.md
docs/reports/: ENGINEERING_REPORT.md  REPRODUCIBILITY_REPORT.md  SCIENTIFIC_REPORT.md
examples/: sample_trajectories.csv
paper/: abstract.md  contributions.md  future_work.md
scripts/: generate_figures.py  make_demo_gif.py  run_all.py  run_baseline.py  run_benchmarks.py  run_risk_demo.py  run_synthetic_demo.py
src/safecrossai/: __init__.py  cli.py
src/safecrossai/benchmark/: __init__.py  comparison.py  export.py  metadata.py  report.py
src/safecrossai/datasets/: __init__.py  csv_loader.py  demo.py  splitting.py  toy.py
src/safecrossai/evaluation/: __init__.py  classification.py  lstm.py  metrics.py
src/safecrossai/experiments/: __init__.py  baseline_experiment.py  csv_baseline_experiment.py
src/safecrossai/models/: __init__.py  base.py  outputs.py
src/safecrossai/prediction/: __init__.py  baseline.py  linear.py  lstm.py
src/safecrossai/risk/: __init__.py  safety_metrics.py  scoring.py  uncertainty.py
src/safecrossai/simulation/: __init__.py  intersection_simulator.py
src/safecrossai/social/: __init__.py  features.py  geometry.py  graph.py  neighbors.py  scene.py  sequences.py  ttc.py  (+1 more)
tests/: test_baseline.py  test_baseline_experiment.py  test_benchmark_constant_velocity.py  test_benchmark_export.py  test_benchmark_grouped_split.py  test_benchmark_lstm_compare.py  test_benchmark_report.py  test_benchmark_train_test.py  test_cli.py  test_cli_exports.py  test_cli_scene_summary.py  test_csv_baseline_experiment.py  test_csv_loader.py  test_demo_scenario.py  test_evaluation_classification.py  test_geometry.py  test_ind_loader.py  test_ind_samples.py  test_ind_scenes.py  test_interaction_graph.py  test_linear_prediction.py  test_lstm.py  test_lstm_evaluation.py  test_model_api.py  test_neighbors.py  test_risk.py  test_scene.py  test_scene_sequences.py  test_social_features.py  test_social_imports.py  test_splitting.py  test_synthetic_intersection_simulator.py  test_temporal_features.py  test_toy_dataset.py  test_training_loops.py  test_training_steps.py  test_training_tensors.py  test_ttc.py  test_uncertainty.py  test_visualization.py
website/: README.md
(+11 files in other folders)
