[project]
name = "safecrossai"
version = "0.1.0"
description = "Research scaffold for intelligent-intersection VRU trajectory prediction and interaction-risk analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Panagiota Grosdouli"}
]
license = {text = "MIT"}
keywords = [
    "trajectory-prediction",
    "vulnerable-road-users",
    "smart-intersections",
    "autonomous-driving",
    "road-safety",
    "intelligent-transportation-systems",
    "interaction-graphs",
    "risk-estimation",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.scripts]
safecrossai = "safecrossai.cli:main"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "jupyter>=1.0",
]
demo = [
    "imageio>=2.34",
    "imageio-ffmpeg>=0.4",
]
vision = [
    "opencv-python>=4.8",
]
graph = [
    "torch>=2.1",
    "torch-geometric>=2.5",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers --disable-warnings"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
